type shi